<resources>
    <string name="app_name">Paikar.shop</string>
    <string name="cart">Cart</string>
    <string name="bag">Bag</string>
    <string name="call">Call</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="rice_pulses_flour">Rice, Pulses, Flour</string>
    <string name="oil_salt_sugar">Oil, Salt, Sugar</string>
    <string name="spices">Spices</string>
    <string name="clothing_and_footwear">Clothing and Footwear</string>
    <string name="vegetables_and_fruits">Vegetables and Fruits</string>
    <string name="cosmetics">Cosmetics</string>
    <string name="kitchen_materials">Kitchen Materials</string>
    <string name="hardware_and_electronics">Hardware and Electronics</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="notification">Notification</string>
    <string name="return_policy">Return Policy</string>
    <string name="payment_system">Payment System</string>
    <string name="vehicle">Vehicle</string>
    <string name="credit_policy">Credit Policy</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="vision">Vision</string>
    <string name="complain_or_suggestion">Complain / Suggestion</string>
    <string name="rice">Rice</string>
    <string name="pulses">Pulses</string>
    <string name="flour">Flour</string>
    <string name="suzy">Suzy</string>
    <string name="semai">Semai</string>
    <string name="price_demo">$ 80</string>
    <string name="one_kg">1 kg</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="dummy_description">The dominant food crop of Bangladesh is rice, accounting for about 75 percent of agricultural land use (and 28 percent of GDP).
        Rice production increased every year in the 1980s (through 1987) except FY 1981, but the annual increases have generally been modest, barely keeping pace with the population.Rice production exceeded
        15 million tons for the first time in FY 1986. In the mid-1980s, Bangladesh was the fourth largest rice producer in the world, but its productivity was low compared with other Asian countries,
        such as Malaysia and Indonesia.</string>
    <string name="buy_now">Buy Now</string>
    <string name="short_description">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used.</string>
    <string name="weight_in_kg">Weight (kg):</string>
    <string name="sample_quantity">0</string>
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>
    <string name="description">Description</string>
    <string name="item_added_to_cart">Item has been added to cart</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="quantity_must_be_greater_than_zero">Quantity must be greater than zero</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="place_order">Place Order</string>
    <string name="submit_order">Submit Order</string>
    <string name="order_details">Order Details</string>
    <string name="total">Total</string>
    <string name="dummy_no_of_product">(4 Products)</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="submit">Submit</string>
    <string name="please_enter_coupon_code">Please enter coupon code</string>
    <string name="go_back_home">Go Back Home</string>
    <string name="your_order_was_successful">Your order was successful</string>
    <string name="an_agent_will_contact_with_you_within_twenty_four_hours">An agent will contact with you within 24 hours</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_full_name">Your full name</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="next">Next</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in_here">Sign in here!</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_number">Phone Number</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="create_new_account">Create new account</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_have_sent_you_four_digit_otp">We have sent a code of four digits</string>
    <string name="your_number">Your Number</string>
    <string name="dummy_mobile_number">01745124578</string>
    <string name="get_code_again">Get code again</string>
    <string name="dummy_time">15 sec</string>
    <string name="get_code_again_with_seconds">Get code again in 15 sec</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_valid_otp">Please enter valid otp</string>
    <string name="message">Message</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="dummy_name">Sakhawat Hossain</string>
    <string name="dummy_phone_number">01688499299</string>
    <string name="update">Update</string>
    <string name="about_us_details">We can find Bangladesh online supermarkets, grocers, fruit shops, universities and health, minor counseling, baby counseling, clothing counseling and meat and fishing.</string>
    <string name="about_us_tagline_heading">So create that jealous fascination of meaninglessness and money making in yourself:</string>
    <string name="about_us_tagline_1">1. You dont have to be a sage to write an epic.</string>
    <string name="about_us_tagline_2">2. Make that jealous fascination of meaninglessness and money making in yourself - I want a little curiosity.</string>
    <string name="about_us_tagline_3">3. So you will decide which word will be useful.</string>
    <string name="about_us_tagline_4">4. So be aware, what do you think - to him; Be aware.</string>
    <string name="about_us_tagline_5">5. So you will decide which word will be useful.</string>
    <string name="payment_system_heading">You can make payments through wholesale, rocket, cash and bank transfer at paikar.com.</string>
    <string name="bkash">Bkash</string>
    <string name="rocket">Rocket</string>
    <string name="one">1</string>
    <string name="one_dot">1.</string>
    <string name="bkash_app_payment_instruction">Instructions for payment through bKash app.</string>
    <string name="rocket_app_payment_instruction">Instructions for payment through Rocket app.</string>
    <string name="complain_or_suggestion_details">So create in yourself that jealous fascination of meaninglessness and meaninglessness:</string>
    <string name="return_policy_details">We are a Bangladeshi online supermarket that sells products in categories such as groceries, fruits and vegetables, beauty and health, family care, baby care, pet care and delivering meat and fish to your doorstep.</string>
    <string name="return_policy_tagline">So create that jealous fascination of meaninglessness and money making in yourself:</string>
    <string name="transport_facilities">Transportation facilities</string>
    <string name="contact_address_details">Address: 18 / A, Mohammadia Housing (Behind Children\'s Park), Mohammadpur, Dhaka-1207</string>
    <string name="phone_sample">Phone: + 801xxxxxxxxx, + 801xxxxxxxxx</string>
    <string name="support_email_sample">Email: support@paikary.com</string>
    <string name="hotline_sample">Hotline: +8096124575, 16547</string>
</resources>