<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/notification"
            android:icon="@drawable/ic_icon_notifications"
            android:title="@string/notification" />

        <item android:id="@+id/returnPolicy"
            android:icon="@drawable/ic_icon_return_policy"
            android:title="@string/return_policy" />

        <item android:id="@+id/paymentSystem"
            android:icon="@drawable/ic_icon_payment_system"
            android:title="@string/payment_system" />

        <item android:id="@+id/vehicle"
            android:icon="@drawable/ic_icon_vehicle"
            android:title="@string/vehicle" />

        <item android:id="@+id/creditPolicy"
            android:icon="@drawable/ic_icon_credit_policy"
            android:title="@string/credit_policy" />
    </group>

    <group android:id="@+id/group_menu">
        <item android:id="@+id/aboutUs"
            android:icon="@drawable/ic_icon_about_us"
            android:title="@string/about_us" />

        <item android:id="@+id/contactUs"
            android:icon="@drawable/ic_icon_contact_us"
            android:title="@string/contact_us" />

        <item android:id="@+id/vision"
            android:icon="@drawable/ic_icon_vision"
            android:title="@string/vision" />

        <item android:id="@+id/complainOrSuggestion"
            android:icon="@drawable/ic_icon_complain"
            android:title="@string/complain_or_suggestion" />
    </group>
</menu>