<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000"
        tools:context=".activities.companyinfo.VisionActivity">

        <LinearLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:elevation="1dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/BackButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_icon_arrow_left"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="24dp"
                android:gravity="center|left"
                android:text="@string/app_name"
                android:textColor="@color/toolbar_title_color"
                android:textSize="24sp"/>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_below="@id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/ic_illustration_vision"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:scaleType="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:gravity="center|left"
                    android:layout_marginTop="16dp"
                    android:text="@string/vision"
                    android:textColor="@color/md_black_1000"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:gravity="center|left"
                    android:layout_marginTop="8dp"
                    android:letterSpacing="0.02"
                    android:text="@string/return_policy_details"
                    android:textColor="@color/md_grey_800"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:gravity="center|left"
                    android:layout_marginTop="8dp"
                    android:letterSpacing="0.02"
                    android:text="@string/return_policy_tagline"
                    android:textColor="@color/md_grey_800"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:gravity="center|left"
                    android:layout_marginTop="16dp"
                    android:text="@string/about_us_tagline_1"
                    android:textColor="@color/md_grey_800"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:gravity="center|left"
                    android:layout_marginTop="8dp"
                    android:text="@string/about_us_tagline_2"
                    android:textColor="@color/md_grey_800"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:gravity="center|left"
                    android:layout_marginTop="8dp"
                    android:text="@string/about_us_tagline_3"
                    android:textColor="@color/md_grey_800"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:gravity="center|left"
                    android:layout_marginTop="8dp"
                    android:text="@string/about_us_tagline_4"
                    android:textColor="@color/md_grey_800"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:gravity="center|left"
                    android:layout_marginTop="8dp"
                    android:text="@string/about_us_tagline_5"
                    android:textColor="@color/md_grey_800"
                    android:textSize="14sp"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>