<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/md_white_1000"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/ic_shopping"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/your_order_was_successful"
                android:textColor="@color/md_black_1000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/an_agent_will_contact_with_you_within_twenty_four_hours"
                android:textColor="@color/md_black_1000"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <android.widget.Button
                    android:id="@+id/backToHomeButton"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_height="40dp"
                    android:textAllCaps="true"
                    android:text="@string/go_back_home"
                    android:background="@drawable/green_gradient_color_button"
                    android:textColor="@color/md_white_1000"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>